[gd_scene load_steps=14 format=3 uid="uid://b31uws5qdthau"]

[ext_resource type="Theme" uid="uid://dscf681dqd0c6" path="res://Assets/Themes/Panel/panelOption01Upgrades.tres" id="1_p5hmg"]
[ext_resource type="Script" uid="uid://c4tis5ap2q3da" path="res://Scripts/upgrade_card.gd" id="2_h5b53"]
[ext_resource type="LabelSettings" uid="uid://beikfgv4wu4n4" path="res://Assets/Themes/Label/Upgrade/tittleOptionUpgradesSettings.tres" id="2_mp78j"]
[ext_resource type="Resource" uid="uid://bow15ypw4rnvx" path="res://Resource/Loot.tres" id="3_caov0"]
[ext_resource type="Texture2D" uid="uid://dg3j5drlyl2hm" path="res://Assets/Art/heart_icon.png" id="3_h5b53"]
[ext_resource type="Theme" uid="uid://bup75y2ek0q03" path="res://Assets/Themes/RichText/richTextUpgrades.tres" id="4_caov0"]
[ext_resource type="LabelSettings" uid="uid://bjmu45x5kyi2j" path="res://Assets/Themes/Label/Upgrade/labelSettings.tres" id="5_a3fso"]
[ext_resource type="FontFile" uid="uid://burjh4d37tdqd" path="res://Assets/Font/PressStart2P-Regular.ttf" id="6_htlf0"]
[ext_resource type="Texture2D" uid="uid://dvkewiavm3afl" path="res://Assets/Art/money.png" id="7_caov0"]
[ext_resource type="AudioStream" uid="uid://q48pf4wdpbwm" path="res://Assets/Audio/UIMove.mp3" id="9_m4tn7"]
[ext_resource type="AudioStream" uid="uid://c0utk104dqgq3" path="res://Assets/Audio/UIAccept.mp3" id="10_htlf0"]

[sub_resource type="LabelSettings" id="LabelSettings_hj8ga"]
font = ExtResource("6_htlf0")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h5b53"]

[node name="UpgradeCard" type="Panel"]
custom_minimum_size = Vector2(284, 460)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("1_p5hmg")
script = ExtResource("2_h5b53")
data = ExtResource("3_caov0")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Content" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="Level" type="Label" parent="Margin/Content"]
layout_mode = 2
text = "Level 1
"
label_settings = SubResource("LabelSettings_hj8ga")
horizontal_alignment = 2

[node name="Title" type="Label" parent="Margin/Content"]
custom_minimum_size = Vector2(244, 70)
layout_mode = 2
size_flags_vertical = 1
text = "LIFE"
label_settings = ExtResource("2_mp78j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="Margin/Content"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture = ExtResource("3_h5b53")
stretch_mode = 5

[node name="Description" type="RichTextLabel" parent="Margin/Content"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_caov0")
text = "Increases health by 10%

Perfect for those who want to go further
"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/Content"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Margin/Content/HBoxContainer"]
layout_mode = 2
texture = ExtResource("7_caov0")
expand_mode = 2
stretch_mode = 5

[node name="Cost" type="Label" parent="Margin/Content/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "100"
label_settings = ExtResource("5_a3fso")

[node name="Interaction" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_h5b53")

[node name="Audio" type="Node" parent="."]

[node name="Move" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("9_m4tn7")
bus = &"Sfx"

[node name="Accept" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("10_htlf0")
bus = &"Sfx"

[connection signal="gui_input" from="Interaction" to="." method="_on_interaction_gui_input"]
[connection signal="mouse_entered" from="Interaction" to="." method="_on_interaction_mouse_entered"]
[connection signal="mouse_exited" from="Interaction" to="." method="_on_interaction_mouse_exited"]
